# mc-trimmer

./: .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml
data/: _r.-13.8.mca  r.-13.8.mca
mc-trimmer/: main.py
mc_trimmer/: __init__.py  __main__.py  cli.py  entities.py  main.py  primitives.py  regions.py
tests/: test_all.py
tests/in/: remove_one.mca  simple.mca
tests/in/entities/: remove_one.mca
