[project]
name = "mc-trimmer"
version = "0.1.0"
description = ""
authors = [
    {name = "Thaodan", email = ""},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
